[package]
name = "learn-agent-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde_json = "1.0.149"
anyhow = "1"
dotenvy = "0.15.0"